# rsomics-edger-goodturing

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  goodturing_oracle.R  make_fixtures.R
tests/golden/: counts.tsv  golden_gt.tsv  golden_prop.tsv
